# lidar_with_mirror

./: README.md  frames.gv  lidar_with_mirror_pkgs.install
analysis/: convert.py
bagfiles/: 2022-05-13-16-14-09.bag
lidar_with_mirror/: CMakeLists.txt  package.xml  setup.cfg  setup.py
lidar_with_mirror/include/lidar_with_mirror/: convert_pointcloud.h
lidar_with_mirror/lidar_with_mirror/: check_ground_height.py  demo_change_angle.py  estimate_posture.py  experiment.py  merge_measured_data.py  mirror_lidar.py
lidar_with_mirror/scripts/: calibrate_mirror_pose.py  check_estimate_posture.py  check_ground_height.py  demo_change_angle.py  estimate_posture.py  experiment.py  hough.py  merge_measured_data.py  mirror_lidar.py
lidar_with_mirror/src/: convert_pointcloud.cpp  convert_pointcloud_node.cpp
lidar_with_mirror_bringup/: CMakeLists.txt  package.xml
lidar_with_mirror_bringup/launch/: lidar_with_mirror.launch  lidar_with_mirror_calibration.launch  lidar_with_mirror_sim.launch  lidar_with_mirror_sim.launch.py  orne_box_lidar_with_mirror_sim.launch  urg_lidar.launch
lidar_with_mirror_bringup/rviz/: rviz.rviz
lidar_with_mirror_control/: CMakeLists.txt  package.xml
lidar_with_mirror_control/config/: lidar_with_mirror_control.yaml
lidar_with_mirror_description/: CMakeLists.txt  package.xml
lidar_with_mirror_description/launch/: check_lidar_with_mirror_urdf.launch  check_orne_box_lidar_with_mirror_urdf.launch  display.launch.py
lidar_with_mirror_description/urdf/: check_lidar_with_mirror.urdf.xacro  lidar_with_mirror.gazebo.xacro  lidar_with_mirror.urdf.xacro  orne_box_lidar_with_mirror.gazebo.xacro  orne_box_lidar_with_mirror.urdf.xacro
lidar_with_mirror_description/urdf/obstacle/: model.sdf
lidar_with_mirror_description/urdf/sensor/: lidar_with_mirror.gazebo.xacro  lidar_with_mirror.urdf.xacro
lidar_with_mirror_navigation_executor/: CMakeLists.txt  package.xml
lidar_with_mirror_navigation_executor/launch/: localization.launch  move_base.launch  nav_static_map.launch
lidar_with_mirror_navigation_executor/param/: costmap_common_params.yaml
