<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_with_mirror</name>
  <version>0.0.0</version>
  <description>The lidar_with_mirror package</description>

  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">haya</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>lidar_with_mirror_bringup</depend>
  <depend>lidar_with_mirror_control</depend>
  <depend>lidar_with_mirror_description</depend>
  <depend>lidar_with_mirror_navigation_executor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
