<?xml version="1.0"?>
<package format="3">
  <name>lidar_with_mirror_bringup</name>
  <version>0.0.0</version>
  <description>The lidar_with_mirror_bringup package</description>
  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">Yasuo Hayashibara</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
