<?xml version="1.0"?>
<package format="2">
  <name>lidar_with_mirror_control</name>
  <version>0.0.0</version>
  <description>The lidar_with_mirror_control package</description>
  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">Yasuo Hayashibara</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
