<?xml version="1.0"?>
<package format="3">
  <name>lidar_with_mirror_description</name>
  <version>0.0.0</version>
  <description>The lidar_with_mirror_description package</description>
  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">Yasuo Hayashibara</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

</package>

