<?xml version="1.0"?>
<package>
  <name>lidar_with_mirror_navigation_executor</name>
  <version>0.0.0</version>
  <description>The lidar_with_mirror_navigation_executor package</description>
  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">Yasuo Hayashibara</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>map_server</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <export>
  </export>
</package>
